[updated] Packages and styles

--- a/ClientSide Code/src/index.html
+++ b/ClientSide Code/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tasker</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8; X-Content-Type-Options=nosniff">
+	<title>Tasker | A Simple ToDo App using Angular</title>
+	<meta name="keywords" content="limatgans, ganesh, Tasker, ToDo App, Angular">
+	<meta name="description" content="Tasker is a simple ToDo App using Angular created by limatgans. (Initial Template from F22 Labs) .">
+	<meta name="subject" content="To Do App">
+	<meta name="copyright" content="Ganesh">
+	<meta name="language" content="EN">
+	<meta name="robots" content="index,follow">
+	<meta name="author" content="Ganesh M, limatgans(AT)gmail.com">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="x-dns-prefetch-control" content="on">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
